[package]
name = "warden-sdk"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for Agent Warden — wraps the proxy POST /mcp surface and the ledger audit/verify endpoints with typed verdicts."
license = "Apache-2.0"
repository = "https://github.com/vanteguardlabs/warden-sdk"
readme = "README.md"
keywords = ["ai", "agent", "security", "client", "sdk"]
categories = ["api-bindings", "network-programming"]

[lib]
name = "warden_sdk"
path = "src/lib.rs"

[dependencies]
# rustls-tls (not native-tls) so a downstream `cargo install` on a fresh
# box doesn't need a system openssl. Same combo as warden-lite.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
# SHA-256 for the bearer-token fingerprint on `AgentsClient`. The
# console's /config page renders `configured (sha256: ab12cd34)` as a
# non-invertible presence indicator for the operator OIDC token.
sha2 = "0.10"

[dev-dependencies]
# axum 0.8 (not 0.7) — the `{param}` capture syntax in test routes is
# 0.8-only (0.7 used `:param`).
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"

[lints.rust]
unreachable_pub = "warn"
